Move Recently Added Resources to Recently Added Platforms.  Still accomplishes the task of showing new items on the dashboard, but without the complicated SQL that was necessary to generate the resource tree.

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -583,7 +583,7 @@ dash.home.SummaryCounts=Summary Counts
 dash.home.ResourceHealth=Favorite Resources
 dash.home.ResourceHealth.rss.item.availability=Current Availability ({0})
 dash.home.RecentResources=RECENTLY VIEWED RESOURCES
-dash.home.RecentlyApproved=Recently Added Resources
+dash.home.RecentlyApproved=Recently Added 
 dash.home.CriticalAlerts=Recent Alerts
 dash.home.Inventory=Recent Inventory Changes
 dash.home.AutoDiscovery=Auto-Discovery
@@ -645,7 +645,7 @@ dash.home.AddContent.select=Select Portlet
 
 .dashContent.resourceHealth=Favorite Resources
 .dashContent.recentResources=Recently Viewed Resources
-.dashContent.recentlyApproved=Recently Added Resources
+.dashContent.recentlyApproved=Recently Added 
 .dashContent.criticalAlerts=Recent Alerts
 .dashContent.autoDiscovery=Auto-Discovery
 .dashContent.controlActions=Control Actions
@@ -721,7 +721,7 @@ dash.home.FormLabel.AddContent=Add content to this column:
 dash.settings.PageTitle.SQ=HQ Dashboard Settings: Saved Queries
 dash.settings.PageTitle.SC=HQ Dashboard Settings: Summary Counts
 dash.settings.PageTitle.RH=HQ Dashboard Settings: Favorite Resources
-dash.settings.PageTitle.RA=HQ Dashboard Settings: Recently Added Resources
+dash.settings.PageTitle.RA=HQ Dashboard Settings: Recently Added 
 dash.settings.PageTitle.A=HQ Dashboard Settings: Alerts
 dash.settings.PageTitle.AD=HQ Dashboard Settings: Auto-Discovery Queue
 dash.settings.PageTitle.CA=HQ Dashboard Settings: Control Actions
@@ -776,7 +776,7 @@ dash.settings.criticalAlerts.for=for
 dash.settings.criticalAlerts.period=.
 
 dash.settings.recentlyApproved.last=Last
-dash.settings.recentlyApproved.approved=days
+dash.settings.recentlyApproved.platforms=platforms
 
 dash.settings.resourcehealth.AddResourcesPageTitle=Dashboard Settings: Favorite Resources: Add Resources
 dash.settings.alerts.AddResourcesPageTitle=Dashboard Settings: Alerts Add/Remove Resources
