Start to move escalation UI into admin area

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -45,6 +45,7 @@ common.header.Description=Description
 common.header.Group=Group
 common.header.ResourceName=Resource Name
 common.header.Members=Members
+common.header.Name=Name
 common.label.Description=Description:
 common.label.Name=Name:
 common.label.Password=Password:
@@ -277,7 +278,6 @@ admin.role.alert.Saturday=Saturday
 admin.role.users.FirstNameTH=First Name
 admin.role.users.LastNameTH=Last Name
 admin.role.users.UsernameTH=Username
-admin.role.users.NameTH=Name
 admin.role.users.EmailTH=Email
 admin.role.users.DepartmentTH=Department
 admin.role.users.UsersTab=Users
@@ -291,7 +291,6 @@ admin.role.groups.AssignToRoleTab=Assign To Role
 admin.role.groups.NewResourceGroupButton=New Group...
 admin.role.groups.AssignedGroupsTab=Assigned Groups
 #
-admin.role.list.NameTH=Name
 admin.role.list.OwnerTH=Owner
 admin.role.list.MembersTH=Members
 #
@@ -401,7 +400,6 @@ admin.user.changePassword.NoSpaces=At least 6 case-sensitive characters and numb
 # USER.LIST
 admin.user.list.First=First Name
 admin.user.list.Last=Last Name
-admin.user.list.Name=Name
 admin.user.list.Username=Username
 admin.user.list.Phone=Phone
 admin.user.list.Role=Role
@@ -1199,7 +1197,6 @@ resource.group.inventory.New.AddResourcesEtc=Add resources to this group after c
 
 resource.group.inventory.Edit.Title=Edit (Group Name)
 resource.group.inventory.Edit.Link.Change=Change...
-resource.group.inventory.NameTH=Name
 
 resource.group.inventory.Title=(Group Name)
 resource.group.inventory.Edit.NewAlertDef.Title=Edit (Group Name): New Alert Definition
@@ -1939,7 +1936,6 @@ alert.current.detail.notify.CAM=HQ Users Notified:
 alert.current.detail.escalation.action=Action {0}:
 alert.config.props.NB.Email=Email
 alert.config.props.NB.Via=Notify Via
-alert.config.props.NB.Name=Name
 alert.config.props.NB.Members=Members
 alert.config.props.NB.FirstName=First Name
 alert.config.props.NB.LastName=Last Name
@@ -2534,8 +2530,6 @@ resource.group.monitor.visibility.config.Availability.AvailabilityField=Availabi
 resource.group.monitor.visibility.config.Availability.UnavailabilityField=Availability threshold 
 
 resource.server.ControlSchedule.SubTitle=Click  "New..." below to schedule a Control Action.
-
-resource.application.inventory.ApplicationName=Name
 
 resource.application.inventory.ApplicationTypeField=Application Type
 
