Pass alert ID and name in parameters to create new escalation scheme

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -554,6 +554,7 @@ admin.settings.error.InvalidSNMPGenericID=SNMP Generic ID is invalid, must be a 
 
 admin.config.link.Return=&lt;&lt; Return to Administration 
 admin.config.confirm.saveSettings=The configuration settings were successfully saved.
+admin.config.message.to.create=Note: To create a new escalation scheme for this alert definition, please go to the <a href="{0}">Administration</a> section.
 admin.config.message.noEscalations=There are no escalation schemes
 admin.config.error.escalation.CannotDelete=Escalation cannot be deleted because it is currently in use
 
@@ -1713,8 +1714,10 @@ alert.config.escalation.then=Then
 alert.config.escalation.end=continue
 alert.config.escalation.wait=wait {0} minutes
 alert.config.escalation.scheme=Escalation Scheme:
+alert.config.escalation.scheme.for=Escalation Scheme for {0}:
 alert.config.escalation.allow.pause=Allow user to pause escalation for
 alert.config.escalation.allow.continue=Continue escalation without pausing
+alert.config.escalation.acknowledged=If the alert is acknowledged:
 alert.config.escalation.state.change=If the alert state has changed:
 alert.config.escalation.state.change.notify.previous=Notify previously notified users of the change
 alert.config.escalation.state.change.notify.all=Notify entire escalation chain of the change
