Change buttons to Edit and Save and then add Cancel

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -55,6 +55,9 @@ common.label.Pipe=|
 common.label.SelectAll=Select All
 common.label.None=None
 common.label.Never=Never
+common.label.Edit=Edit
+common.label.Save=Save
+common.label.Cancel=Cancel
 common.title.Edit=Edit {0}
 common.label.CreateNew=Create New
 
