Add configure links to the tools menu

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -235,7 +235,7 @@ admin.role.AddRoleGroupsTitle=HQ Edit Role Assign Groups To Role - {0}
 admin.role.AlertNotificationTimeRangeTitle=HQ Edit Role Alert Notification Time Range - {0}
 admin.role.ChangeRoleOwnerTitle=HQ Change Owner - {0}
 #
-admin.role.view.ReturnToRoles=< Return to Roles
+admin.role.view.ReturnToRoles=« Return to Roles
 #
 admin.role.props.PropertiesAndPermissionsTab=Properties & Permissions
 admin.role.props.GeneralPropertiesTab=General Properties
@@ -339,7 +339,7 @@ admin.user.ListUsers=List Users
 admin.user.NewUser=New User
 admin.user.GeneralProperties=General Properties
 admin.user.RolesAssignedTo=Roles Assigned To
-admin.user.ReturnToUsers=< Return to Users
+admin.user.ReturnToUsers=« Return to Users
 
 # permission excpeptions associated with modifying a user
 admin.user.error.PermissionException.EditUser=You do not have permissions to edit this user.
@@ -1024,6 +1024,7 @@ resource.platform.inventory.configProps.NoAgentConnection=There are no agents se
 resource.platform.inventory.configProps.NoAgentsAvailable=There are no agents available to service this platform.
 
 # PLATFORM
+resource.platform.inventory.link.Configure=Configure Platform
 resource.platform.inventory.NewPlatformLink=New Platform
 
 resource.platform.inventory.NewServerLink=New Server
@@ -1275,6 +1276,7 @@ resource.server.inventory.AddToGroupsPageTitle=Edit {0}: Add To Groups
 resource.server.inventory.ConfigurationPropertiesTitle=HQ Edit Server Configuration Properties - {0}
 
 # RESOURCE.SERVER
+resource.server.inventory.link.Configure=Configure Server
 resource.server.inventory.link.NewService=New Service
 
 resource.server.inventory.confirm.CreateServer=Server {0} has been created.
@@ -1361,6 +1363,7 @@ resource.server.inventory.edit.GroupsTab=Groups
 resource.server.inventory.edit.AddToGroupsTab=Add To Groups
 
 # RESOURCE.SERVICE TITLES
+resource.service.inventory.link.Configure=Configure Service
 resource.service.inventory.NewServiceTitle=HQ New Service
 resource.service.inventory.NewServicePageTitle=New Service
 resource.service.inventory.ViewServiceTitle=HQ View Service Inventory - {0}
@@ -1657,7 +1660,7 @@ resource.application.inventory.services.ReturnLink=&lt; Return to Application In
 resource.application.DependsOnTab=Depends On
 resource.application.ServicesThatDependOnTab=Services That Depend On
 resource.application.services.NoServices=No services depend on 
-resource.application.services.ReturnTo=< Return to Application Inventory
+resource.application.services.ReturnTo=« Return to Application Inventory
 resource.application.ServicesTab=Services
 resource.application.AddDependenciesTab=Add Dependencies
 resource.application.AddServicesTab=Add Services
@@ -1713,6 +1716,8 @@ alert.config.group.edit.page.Cond.Title=HQ Edit Group Alert Definition - {0}
 alert.config.platform.edit.page.Cond.Title=HQ Edit Platform Alert Definition - {0}
 alert.config.server.edit.page.Cond.Title=HQ Edit Server Alert Definition - {0}
 alert.config.service.edit.page.Cond.Title=HQ Edit Service Alert Definition - {0}
+alert.config.escalation.Begin=Begin Escalation
+alert.config.escalation.TheEnd=End Escalation
 alert.config.escalation.then=Then
 alert.config.escalation.end=continue
 alert.config.escalation.wait=wait {0} minutes
