adding the ability to add an action to an existing escalation

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -60,6 +60,7 @@ common.label.Save=Save
 common.label.Cancel=Cancel
 common.title.Edit=Edit {0}
 common.label.CreateNew=Create New
+common.label.AddAction=Add Action
 
 common.value.parenthesis=({0})
 common.value.notavail=N/A
