moved the buttons for adding/canceling escalation sceme actions to be more prominent and added blue headers

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -62,6 +62,7 @@ common.title.Edit=Edit {0}
 common.label.CreateNew=Create New
 common.label.AddAction=Add Action
 common.header.EscalationName=Esclation Name
+common.label.EscalationSchemeActions=Esclation Scheme Actions:
 
 common.value.parenthesis=({0})
 common.value.notavail=N/A
