Put the values in discrete columns so that they would line up better

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -238,7 +238,7 @@ admin.role.AddRoleGroupsTitle=HQ Edit Role Assign Groups To Role - {0}
 admin.role.AlertNotificationTimeRangeTitle=HQ Edit Role Alert Notification Time Range - {0}
 admin.role.ChangeRoleOwnerTitle=HQ Change Owner - {0}
 #
-admin.role.view.ReturnToRoles=« Return to Roles
+admin.role.view.ReturnToRoles=&lt;&lt; Return to Roles
 #
 admin.role.props.PropertiesAndPermissionsTab=Properties & Permissions
 admin.role.props.GeneralPropertiesTab=General Properties
@@ -342,7 +342,7 @@ admin.user.ListUsers=List Users
 admin.user.NewUser=New User
 admin.user.GeneralProperties=General Properties
 admin.user.RolesAssignedTo=Roles Assigned To
-admin.user.ReturnToUsers=« Return to Users
+admin.user.ReturnToUsers=&lt;&lt; Return to Users
 
 # permission excpeptions associated with modifying a user
 admin.user.error.PermissionException.EditUser=You do not have permissions to edit this user.
@@ -955,7 +955,7 @@ resource.common.inventory.security.SecurityTH=Security
 resource.common.inventory.security.AssignedUsernamesTH=Assigned Usernames
 resource.common.inventory.security.DateModifiedTH=Date Modified
 
-resource.common.inventory.security.ReturnToSecuritySetsLink=&lt; Return to Security Sets
+resource.common.inventory.security.ReturnToSecuritySetsLink=&lt;&lt; Return to Security Sets
 resource.common.inventory.security.PropertiesAndSecurityTab=Properties & Security
 resource.common.inventory.security.OwnerLabel=Owner:
 resource.common.inventory.security.ResourceNameLabel=Resource Name:
@@ -1658,12 +1658,12 @@ resource.application.inventory.services.NoDependers=No services depend on &quot;
 resource.application.inventory.services.NoDependees=&quot;{0}&quot; does not depend on any other services
 resource.application.inventory.services.DependeesTab=&quot;{0}&quot; Depends On
 resource.application.inventory.services.DependersTab=Services That Depend On &quot;{0}&quot;
-resource.application.inventory.services.ReturnLink=&lt; Return to Application Inventory
+resource.application.inventory.services.ReturnLink=&lt;&lt; Return to Application Inventory
 
 resource.application.DependsOnTab=Depends On
 resource.application.ServicesThatDependOnTab=Services That Depend On
 resource.application.services.NoServices=No services depend on 
-resource.application.services.ReturnTo=« Return to Application Inventory
+resource.application.services.ReturnTo=&lt;&lt; Return to Application Inventory
 resource.application.ServicesTab=Services
 resource.application.AddDependenciesTab=Add Dependencies
 resource.application.AddServicesTab=Add Services
@@ -1823,7 +1823,7 @@ monitoring.baseline.BlockContent.Times=Collection Times
 monitoring.baseline.BlockContent.Recalc=Recalculate Now
 
 alert.config.props.ViewDef.Title={0}: {1}: Alert Definition
-alert.config.props.ReturnLink=&lt; Return to Alert Definitions
+alert.config.props.ReturnLink=&lt;&lt; Return to Alert Definitions
 alert.config.edit.page.Title=Edit {0}: Alert Properties
 alert.config.edit.page.Baseline.Title=Edit Metric Baseline
 alert.config.edit.page.Cond.Title=Edit {0}: Alert Condition Set
@@ -2248,7 +2248,7 @@ resource.common.monitor.NotEnabled.ToEnable=To enable monitoring, set
 resource.common.monitor.NotEnabled.ConfPropLink=Configuration Properties
 resource.common.monitor.NotEnabled.InInventory= in the Inventory section.
 resource.server.monitor.visibility.error.PlatformPermission=Insufficient privileges to view health data for platform.
-resource.common.monitor.visibility.CompareMetricsReturnLink=&lt; Return to {0} Monitor: Visibility
+resource.common.monitor.visibility.CompareMetricsReturnLink=&lt;&lt; Return to {0} Monitor: Visibility
 
 # RESOURCE.COMMON.MONITOR CHARTS
 resource.common.monitor.visibility.ChartTitle=HQ Chart
@@ -2256,7 +2256,7 @@ resource.common.monitor.visibility.SingleResourceChartPageTitle={0}: {1} Chart
 resource.common.monitor.visibility.MultipleMetric=Multiple Metric
 
 resource.common.monitor.visibility.chart.Metric=Metric:
-resource.common.monitor.visibility.chart.ReturnToLink=&lt; Return to Previous Page
+resource.common.monitor.visibility.chart.ReturnToLink=&lt;&lt; Return to Previous Page
 resource.common.monitor.visibility.chart.PreviousMetricLink=&lt; Previous Metric
 resource.common.monitor.visibility.chart.NextMetricLink=Next Metric &gt;
 
@@ -2358,7 +2358,7 @@ resource.application.monitor.visibility.CompareMetricsTitle=HQ View Application 
 resource.application.monitor.visibility.CompareMetricsPageTitle={0}: Compare Metrics
 
 # RESOURCE.APPLICATION.MONITOR
-resource.application.monitor.visibility.ReturnTo=&lt; Return to Application Monitor: Visibility
+resource.application.monitor.visibility.ReturnTo=&lt;&lt; Return to Application Monitor: Visibility
 
 resource.application.monitor.visibility.ServiceTypeTH=Service Type
 resource.application.monitor.visibility.ServiceList=Current Health of {0}
@@ -2388,7 +2388,7 @@ resource.platform.monitor.visibility.J2EEServers=J2EE Servers
 resource.platform.monitor.visibility.ServletContainerServers=Servlet Container Servers
 resource.platform.monitor.visibility.DatabaseServers=Database Servers
 
-resource.platform.monitor.visibility.ReturnTo=&lt; Return to Platform Monitor: Visibility
+resource.platform.monitor.visibility.ReturnTo=&lt;&lt; Return to Platform Monitor: Visibility
 
 # RESOURCE.SERVER.MONITOR TITLE
 resource.server.monitor.visibility.CurrentHealthTitle=HQ View Server Monitor Current Health - {0}
@@ -2410,7 +2410,7 @@ resource.server.monitor.visibility.CompareMetricsPageTitle={0}: Compare Metrics
 resource.server.monitor.visibility.MiniTab.ServerMetrics=Server Metrics
 resource.server.monitor.visibility.MiniTab.VirtualHosts=Virtual Hosts
 
-resource.server.monitor.visibility.ReturnTo=&lt; Return to Server Monitor: Visibility
+resource.server.monitor.visibility.ReturnTo=&lt;&lt; Return to Server Monitor: Visibility
 
 resource.server.monitor.visibility.ServiceTypeTH=Service Type
 resource.server.monitor.visibility.ServiceList=Current Health of {0}
