Lots of cleanups dealing with OPerations and AuthzSession.  We now enable the query cache and start caching Operation.findByNameAndType.  About 10 queries saved per dashboard load for me

--- a/etc/hibernate.properties
+++ b/etc/hibernate.properties
@@ -13,7 +13,7 @@ hq.schema.export=true
 hibernate.util.interceptor_class=org.hyperic.hibernate.HypericInterceptor
 
 #
-hibernate.cache.use_query_cache=no
+hibernate.cache.use_query_cache=true
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.provider_class=net.sf.ehcache.hibernate.SingletonEhCacheProvider
 
