Show message to add resources to portlet, fix javascript bug for favorite resources

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -603,6 +603,7 @@ dash.home.ProblemResources.timeRange=From {0} to {1}.
 dash.home.ProblemResources.rss.item.description=Current Availability ({0}), Alert Count({1}), OOB Count({2})
 
 dash.home.no.resource.to.display=No resources to display
+dash.home.add.resources.to.display=No resources to display, please click on the <img src="{0}/images/dash-icon_edit.gif"/> icon above to add resources to portlet.
 dash.home.HQ.is.empty=There are no auto-discovered resources and HQ inventory is empty.<br>Please install and startup some HQ agents to get started with HQ.
 dash.home.no.problems.found=No problems detected
 
