--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -736,7 +736,9 @@ dash.settings.PageTitle.RH.addResources=HQ Dashboard Settings: Favorite Resource
 dash.settings.PageTitle.A.addResources=HQ Dashboard Settings: Alerts Add/Remove Resources
 dash.settings.PageTitle.PR=HQ Dashboard Settings: Problem Resources
 dash.settings.PageTitle.AS=HQ Dashboard Settings: Availability Summary
+dash.settings.PageTitle.AS.addResources=HQ Dashboard Settings: Availability Summary Add/Remove Resources
 dash.settings.PageTitle.MV=HQ Dashboard Settings: Metric Viewer
+dash.settings.PageTitle.MV.addResources=HQ Dashboard Settings: Metric Viewer Add/Remove Resources
  
 dash.settings.DisplaySettings=Display Settings
 dash.settings.SelectedCharts=Selected Charts
