--- a/etc/hibernate.properties
+++ b/etc/hibernate.properties
@@ -6,13 +6,10 @@ hq.schema.statement.delimiter=;
 # the database
 hq.schema.export=true
 
-######################################
-# Hibernate options
-#
-# interceptor
+# Hyperic interceptor
 hibernate.util.interceptor_class=org.hyperic.hibernate.HypericInterceptor
 
-#
+# Cache configuration
 hibernate.cache.use_query_cache=true
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.provider_class=net.sf.ehcache.hibernate.SingletonEhCacheProvider
@@ -21,13 +18,17 @@ hibernate.max_fetch_depth=1
 hibernate.default_batch_fetch_size=8
 hibernate.default_entity_mode=pojo
 
-# order updates to reduce deadlocks
+# SQL Output
+hibernate.show_sql=false
+hibernate.format_sql=false
+
+# Order updates to reduce deadlocks
 hibernate.order_updates=true
 
-# hibernate statistics
+# Generate Hibernate statistics
 hibernate.generate_statistics=true
 
-# use batched DML for automatically versioned data
+# Use batched DML for automatically versioned data
 hibernate.jdbc.batch_versioned_data=true
 
 # Enable? JDBC3 PreparedStatement.getGeneratedKeys()
@@ -39,7 +40,7 @@ hibernate.query.jpaql_strict_compliance=false
 # JDBC2 batch updates
 hibernate.jdbc.batch_size=30
 
-# JBOSS J2EE container integration
+# JBoss J2EE container integration
 hibernate.session_factory_name=java:/HibernateSessionFactory
 hibernate.current_session_context_class=org.hyperic.hq.hibernate.AspectizedCurrentSession
 hibernate.transaction.manager_lookup_class=org.hibernate.transaction.JBossTransactionManagerLookup
