Change Recently Added portlet to display approximate time ago

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -663,11 +663,14 @@ dash.home.AddContent.select=Select Portlet
 dash.autoDiscovery.import.Error=Unable to import platform : {0}
 dash.autoDiscovery.import.ignore.Error=Servers already in the inventory cannot be ignored
 
+dash.recentlyApproved.ago={0} ago
+
 dash.home.TableHeader.ResourceName=Resource Name
 dash.home.TableHeader.PlatformName=Platform Name
 dash.home.TableHeader.Alerts=Alerts
 dash.home.TableHeader.AlertName=Alert Name
 dash.home.TableHeader.DateTime=Date / Time
+dash.home.TableHeader.Time=Time
 dash.home.TableHeader.ScanDate=Scan Date
 dash.home.TableHeader.Found=Found
 dash.home.TableHeader.Status=Status
