[HHQ-501] Change message to "Generate one alert and then disable alert definition"

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1908,7 +1908,7 @@ alert.config.props.CB.EnableTimePeriod=When conditions are met for {2} {3} withi
 alert.config.props.CB.EnableNumTimesInPeriod=Once every {2} times conditions are met within a time period of {0} {1}.
 alert.config.props.CB.Another=Add Another Condition
 alert.config.props.CB.Delete=Delete This Condition
-alert.config.props.CB.Content.UntilReenabled=Disable alert until re-enabled manually
+alert.config.props.CB.Content.UntilReenabled=Generate one alert and then disable alert definition
 alert.config.props.CB.Content.Filter=Filter notification actions that are defined for related alerts.
 alert.config.props.CB.ActualValue=Actual Value:
 alert.config.props.CB.NoActualValue=Not Available
