Clarify that we are only looking at platforms added in the last two days so that we don't have stale data

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -787,7 +787,7 @@ dash.settings.criticalAlerts.for=for
 dash.settings.criticalAlerts.period=.
 
 dash.settings.recentlyApproved.last=Last
-dash.settings.recentlyApproved.platforms=platforms
+dash.settings.recentlyApproved.platforms=platforms added to the inventory in the last 2 days
 
 dash.settings.resourcehealth.AddResourcesPageTitle=Dashboard Settings: Favorite Resources: Add Resources
 dash.settings.alerts.AddResourcesPageTitle=Dashboard Settings: Alerts Add/Remove Resources
