Do not have resources count portlet by default

--- a/web/WEB-INF/DefaultUserPreferences.properties
+++ b/web/WEB-INF/DefaultUserPreferences.properties
@@ -39,7 +39,7 @@
 
 .dashContent.charts=
 
-.dashcontent.portal.portlets.first=|.dashContent.searchResources|.dashContent.savedCharts|.dashContent.recentlyApproved|.dashContent.summaryCounts
+.dashcontent.portal.portlets.first=|.dashContent.searchResources|.dashContent.savedCharts|.dashContent.recentlyApproved
 
 .dashcontent.portal.portlets.second=|.dashContent.autoDiscovery|.dashContent.resourceHealth|.dashContent.criticalAlerts|.dashContent.recentResources
 
