Shorten up the table headers for availability summary

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -665,6 +665,9 @@ dash.autoDiscovery.import.ignore.Error=Servers already in the inventory cannot b
 
 dash.recentlyApproved.ago={0} ago
 
+dash.availSummary.header.Unavail=Unavail
+dash.availSummary.header.Avail=Avail
+
 dash.home.TableHeader.ResourceName=Resource Name
 dash.home.TableHeader.PlatformName=Platform Name
 dash.home.TableHeader.Alerts=Alerts
