Send UI back to inventory page after initiating new auto-discovery.  Add new message.

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1580,6 +1580,7 @@ resource.autodiscovery.UninstalledServicesTab=Uninstalled Services
 resource.autodiscovery.uninstalledServices.ServicesPreviously=- Services previously imported, but no longer on this server.
 
 resource.platform.inventory.autoinventory.status.NoErrors=No Errors Found
+resource.platform.inventory.autoinventory.status.NewScan=A new auto-discovery scan has been initiated.
 
 resource.platform.inventory.autoinventory.error.ServerTypesIsRequired=Scan For Server Types are required.
 resource.platform.inventory.autoinventory.error.ScanDirsIsRequired=Start Directories are required.
