--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -63,6 +63,8 @@ common.label.CreateNew=Create New
 common.label.AddAction=Add Action
 common.header.EscalationName=Esclation Name
 common.label.EscalationSchemeActions=Esclation Scheme Actions:
+common.label.SkipResources=Skip Checked Resources
+common.label.AddtoInventory=Add to Inventory
 
 common.value.parenthesis=({0})
 common.value.notavail=N/A
