Clarify the error

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1034,7 +1034,7 @@ resource.platform.inventory.ListSecurityTitle=HQ List Platform Security Sets - {
 resource.platform.inventory.ListSecurityPageTitle={0}: Security
 resource.platform.inventory.ViewSecurityTitle=HQ View Platform Security Set - {0}
 resource.platform.inventory.EditSecurityTitle=HQ Edit Platform Security Set - {0}
-resource.platform.inventory.configProps.NoAgentConnection=There are no agents servicing this platform.
+resource.platform.inventory.configProps.NoAgentConnection=There are no running agents servicing this platform.
 resource.platform.inventory.configProps.NoAgentsAvailable=There are no agents available to service this platform.
 
 # PLATFORM
