--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -60,7 +60,7 @@ common.label.Save=Save
 common.label.Cancel=Cancel
 common.title.Edit=Edit {0}
 common.label.CreateNew=Create New
-common.label.AddAction=Add Action
+common.label.AddAction=Create Action
 common.header.EscalationName=Esclation Name
 common.label.EscalationSchemeActions=Esclation Scheme Actions:
 common.label.SkipResources=Skip Checked Resources
