fix for typo in escalation header

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -57,11 +57,12 @@ common.label.None=None
 common.label.Never=Never
 common.label.Edit=Edit
 common.label.Save=Save
+common.label.Next=Next
 common.label.Cancel=Cancel
 common.title.Edit=Edit {0}
 common.label.CreateNew=Create New
 common.label.AddAction=Create Action
-common.header.EscalationName=Esclation Name
+common.header.EscalationName=Escalation Name
 common.label.EscalationSchemeActions=Esclation Scheme Actions:
 common.label.SkipResources=Skip Checked Resources
 common.label.AddtoInventory=Add to Inventory
