fix for typo in escalation header

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -57,7 +57,7 @@ common.label.None=None
 common.label.Never=Never
 common.label.Edit=Edit
 common.label.Save=Save
-common.label.Next=Next
+common.label.Next=Next Step
 common.label.Cancel=Cancel
 common.title.Edit=Edit {0}
 common.label.CreateNew=Create New
