--- a/etc/hibernate.properties
+++ b/etc/hibernate.properties
@@ -42,6 +42,6 @@ hibernate.jdbc.batch_size=30
 
 # JBoss J2EE container integration
 hibernate.session_factory_name=java:/HibernateSessionFactory
-hibernate.current_session_context_class=org.hyperic.hq.hibernate.AspectizedCurrentSession
+hibernate.current_session_context_class=org.hyperic.hq.hibernate.CurrentSessionFinder
 hibernate.transaction.manager_lookup_class=org.hibernate.transaction.JBossTransactionManagerLookup
 hibernate.transaction.factory_class=org.hibernate.transaction.CMTTransactionFactory
