fix for the dashboard portlets last updated time in IE

--- a/build.xml
+++ b/build.xml
@@ -623,6 +623,7 @@
 
     <copy todir="${jboss.deploy.dir}/web.ear/hq.war" >
       <fileset dir="${webapp.home}" includes="**/*.js*" />
+      <fileset dir="${webapp.home}" includes="**/*.css" />
     </copy>
 
   </target>
